# Software-Onboarding-2025

./: .gitignore  CMakeLists.txt  CMakelists.txt  default.nix  flake.nix  main.cpp
AbbyM/Lab1/: CMakeLists.txt
AbbyM/Lab1/include/: hello_world.h
AbbyM/Lab1/src/: hello_world.cpp  main.cpp
AbbyM/Lab2/: CMakeLists.txt  default.nix  flake.nix  result
AbbyM/Lab2/Part1/src/: main.cpp
AbbyM/Lab2/Part2/: default.nix  flake.nix  hellolib.nix  result
AbbyM/Lab2/Part2/helloapp/: CMakeLists.txt
AbbyM/Lab2/Part2/hellolib/: CMakeLists.txt
AbbyM/Lab2/Part3/: CMakeLists.txt  default.nix  flake.nix
AnishBudida/lab2/part1/: CMakeLists.txt  default.nix  flake.nix
AnishBudida/lab2/part1/include/: hello_world.hpp
AnishBudida/lab2/part1/src/: hello_world.cpp  main.cpp
AnishBudida/lab3/: CMakeLists.txt  client.sh  default.nix  flake.nix  info.proto  result  result.sh
AnishBudida/lab3/app/: CMakeLists.txt  client.cpp  server.cpp
AnishBudida/lab3/cmake/: lab3lib.cmake.in
AnishBudida/lab3/include/: info.pb.h  mainFile.hpp
AnishBudida/lab3/src/: info.pb.cc  mainFile.cpp
Christine/Lab3/: CMakeLists.txt  default.nix  flake.nix  result
Christine/Lab3/app/: client_main.cpp  server_main.cpp
Christine/Lab3/include/: christine.pb.h  client_driver.h  hytech.pb.h  server_driver.h
Christine/Lab3/proto/christine/: christine.proto
Christine/Lab3/proto/hytech/: hytech.proto
Christine/Lab3/src/: christine.pb.cc  client_driver.cpp  hytech.pb.cc  server_driver.cpp
Cyra/lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  default.nix  flake.nix  result
Cyra/lab3/include/: message.pb.cc  message.pb.h  udp_socket.h
Cyra/lab3/src/: client.cpp  message.pb.cc  message.pb.h  message.proto  server.cpp  udp_socket.cpp
DerekNgu/lab1_hard_project/: CMakeLists.txt
DerekNgu/lab1_hard_project/include/: hello_world.h
DerekNgu/lab1_hard_project/src/: hello_world.cpp  main.cpp
DerekNgu/lab3/: CMakeLists.txt  data.proto  default.nix  flake.nix  result
DerekNgu/lab3/app/: clientMain.cpp  serverMain.cpp
DerekNgu/lab3/include/: Host.hpp  data.pb.h
DerekNgu/lab3/src/: Host.cpp  data.pb.cc
Jason/lab3/: CMakeLists.txt  default.nix  flake.nix  readme.md  result
Jason/lab3/app/: client_driver.cpp  server_driver.cpp
Jason/lab3/include/: client.hpp  server.hpp
Jason/lab3/proto/: message.pb.cc  message.pb.h  message.proto
Jason/lab3/src/: UDPSocket.cpp  UDPSocket.hpp  client.cpp  server.cpp
Jason/lab3/src/proto/: message.pb.cc  message.pb.h  message.proto
JessicaLiu/Lab1/: CMakeLists.txt
JessicaLiu/Lab1/include/: hello.h  hello_world.h
JessicaLiu/Lab1/src/: hello.cpp  hello_world.cpp  main.cpp
PhilipDobranowski/lab1_medium_project/: CMakeLists.txt
PhilipDobranowski/lab2_part1/: CMakeLists.txt  default.nix  flake.nix
PhilipDobranowski/lab2_part1/src/: hello_world.cpp
PhilipDobranowski/lab3/: CMakeLists.txt  default.nix  flake.nix  message.proto  result
PhilipDobranowski/lab3/app/: client.cpp  server.cpp
PhilipDobranowski/lab3/include/: Comm.hpp  message.pb.h
PhilipDobranowski/lab3/src/: Comm.cpp  Comm.hpp  message.pb.cc
Sayan/lab1_hard_project/: CMakeLists.txt
Sayan/lab1_hard_project/include/: hello_world.h
Sayan/lab1_hard_project/src/: hello_world.cpp  main.cpp
Sebastian/Lab1Hard/: CMakeLists.txt
Sebastian/Lab1Hard/include/: HelloWorld.h
Sebastian/Lab1Hard/src/: HelloWorld.cpp  main.cpp
Sebastian/Lab2_Part1/: CMakeLists.txt  default.nix  flake.nix
Sebastian/Lab2_Part1/include/: HelloWorld.hpp  hellolib.hpp
Sebastian/Lab2_Part1/src/: HelloWorld.cpp  hellolib.cpp  main.cpp
Ujaan/Lab-3/: CMakeLists.txt  default.nix  flake.nix
Ujaan/Lab-3/proto/: message.proto
Ujaan/Lab-3/src/: client.cpp  server.cpp  udp_socket.cpp  udp_socket.h
Vidur/: CMakeLists.txt
Vidur/Part-1/: CMakeLists.txt  flake.nix
Vidur/Part-1/include/: hello_world.h
Vidur/Part-1/src/: hello_world.cpp
Vidur/Part-2/: default.nix  flake.nix  hellolib.nix
Vidur/Part-2/helloapp/: CMakeLists.txt  main.cpp
Vidur/Part-2/hellolib/: CMakeLists.txt
Vidur/Part-3/: default.nix  flake.nix
ccp_playground/: CMakeLists.txt  flake.nix
dhruv/lab2p1/: CMakeLists.txt  default.nix  flake.nix  result
dhruv/lab2p1/include/: hello_world.hpp
dhruv/lab2p1/src/: hello_world.cpp  main.cpp
ecwoot-L2P2/hellolib/: CMakeLists.txt
ecwoot-L2P2/hellolib/cmake/: hellolibConfig.cmake.in
ecwoot-L2P2/hellolib/include/: hellolib.h
ecwoot-L2P2/hellolib/src/: hellolib.cpp
goltsmannn2/: .gitignore  CMakeLists.txt  default.nix  flake.nix
goltsmannn2/part1/: CMakeLists.txt  default.nix  result
goltsmannn2/part1/include/: hello_world.hpp
goltsmannn2/part1/src/: hello_world.cpp  main.cpp
goltsmannn2/part2/: default.nix  flake.nix  hellolib.nix
goltsmannn2/part2/hello_bin/: main.cpp
goltsmannn2/part2/helloapp/: CMakeLists.txt
goltsmannn2/part2/hellolib/: CMakeLists.txt
goltsmannn2/part3/: CMakeLists.txt  client.cpp  default.nix  flake.nix  protobuf.proto  server.cpp
goltsmannn2/part3/include/: protobuf.pb.h
goltsmannn2/part3/src/: protobuf.pb.cc
goltsmannn2/src/: hello_world.h  main.cpp
milesK/milesKlab2/: .gitignore  CMakeLists.txt  README.md  default.nix  exe.nix  flake.nix  hellolib.nix  hellolib_exe.nix
milesK/milesKlab2/hellolib/: CMakeLists.txt
milesK/milesKlab2/p3/: CMakeLists.txt  default.nix  flake.nix
milesK/milesKlab3/: CMakeLists.txt  default.nix  flake.nix  result
milesK/milesKlab3/include/: info.pb.h  socket.hpp
milesK/milesKlab3/proto/: info.pb.cpp  info.pb.h  info.proto
milesK/milesKlab3/src/: client.cpp  info.pb.cc  info.proto  server.cpp  socket.cpp  socket.hpp  test.cpp
mitchellcomer/lab3/: CMakeLists.txt  data.proto  default.nix  flake.nix  result
mitchellcomer/lab3/app/: clientMain.cpp  serverMain.cpp
mitchellcomer/lab3/include/: Hub.hpp  data.pb.h
mitchellcomer/lab3/src/: Hub.cpp  data.pb.cc
nikki/part-2/: CMakeLists.txt  hello_world.cpp  main.cpp
ryanlau/lab1_hard_project/: CMakeLists.txt
ryanlau/lab1_hard_project/include/: hello_world.h
ryanlau/lab1_hard_project/src/: hello_world.cpp  main.cpp
(+389 files in other folders)
